--- a/src/style.scss
+++ b/src/style.scss
@@ -1,5 +1,33 @@
-$body-color: blue;
+// $body-color: green;
 
-body {
-  color: $body-color;
+// body {
+//   color: $body-color;
+// }
+
+#content {
+  display: grid;
+  grid-template-rows: repeat(10, 1fr);
+  grid-template-columns: repeat(10, 1fr);
+  height: 500px;
+  width: 500px;
+  background-color: blue;
+
+  .square {
+    border-style: solid;
+  }
+
+  .ship-square {
+    background-color: grey;
+  }
+
+  .damaged-ship-square {
+    background-color: red;
+  }
+
+  .missed {
+    background-color: black;
+  }
+
 }
+
+
