--- a/src/style.scss
+++ b/src/style.scss
@@ -30,6 +30,14 @@
     background-color: black;
   }
 
+  .builtSquare {
+    background-color: whitesmoke;
+  }
+
+  .partial-ship {
+    background-color: whitesmoke;
+  }
+
 }
 
 #computer-content {
